Fix branch alias

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "changelogUrl": "https://raw.githubusercontent.com/panlatent/craft-sms-login/master/CHANGELOG.md",
         "class": "panlatent\\craft\\smslogin\\Plugin",
         "branch-alias": {
-            "dev-master": "0.1.x-dev"
+            "dev-main": "0.1.x-dev"
         }
     }
 }
